# AI-Agents-Intensive-Course-with-Google

./: .devdbrc  .gitignore  Makefile  README.md  main.py  pyproject.toml
.idx/: dev.nix
agent_tools/: agent.py
code_executor/: agent.py
loop_agent/: agent.py
multi_agent/: agent.py
parallel_agent/: agent.py
persistent_session_agent/: agent.py
sequential_agent/: agent.py
session_example/: agent.py
simple_llm_agent/: agent.py
src/.adk/: session.db
src/agent_tools/: agent.py
src/agent_tools_custom_tool/: agent.py
src/ai_agents_intensive_course_with_google/: __init__.py
src/improved_agent_tool/: agent.py  config.py
src/loop_agent/: agent.py
src/loop_agent/.adk/: session.db
src/multi_agent/: agent.py  config.py
src/multi_agent/.adk/: session.db
src/parallel_agent/: agent.py
src/parallel_agent/.adk/: session.db
src/sequential_agent/: agent.py
src/sequential_agent/.adk/: session.db
src/sequentital_agent/: agent.py
src/simple_agent/: agent.py
src/simple_agent/.adk/: session.db
